2006-02-05  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/changing-defaults.itely: Fix link v2.5, out-www.

2006-02-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/framework-ps.scm (dump-stencil-as-EPS): don't hardcode left
	EPS edge at 0, but take minimum with left-overshoot. This fixes
	cut off system start delims. 

	* lily/instrument-name-engraver.cc (stop_translation_timestep):
	hack: add to axis group if not added yet. This fixes hara kiri'd
	piano staves.

	* lily/hara-kiri-group-spanner.cc
	(force_hara_kiri_in_y_parent_callback): fix signatures.

	* lily/hairpin.cc (print): check next hairpin to see whether or
	not to be continuing.

2006-02-04  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Remove trailing whitespace from makefiles.
	
	* flower/include/std-vector.hh: Add binary_search_bounds workaround
	for earlier gcc.

	* .cvsignore: Add out*, out-www, config-*.  Remove lots of cruft.

	* flower/include/std-vector.hh[!HAVE_STL_DATA_METHOD]: Workaround.

	* config.hh.in (HAVE_STL_DATA_METHOD): Add.

	* stepmake/aclocal.m4 (STEPMAKE_STL_DATA_METHOD): New function.

	* configure.in: Use it.

2006-02-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/music-functions.scm (pitch-of-note): new function.

	* ly/music-functions-init.ly: add \octave and \addquote

	* lily/parser.yy (music_function_chord_body): softcode \octave.
	(lilypond_header): softcode \addquote

2006-02-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/include/std-vector.hh[STD_VECTOR]: Do not include
	array.hh, parray.hh at all.  Getting ready to flip the
	configure default.

	* lily/include/lily-proto.hh (Link_array__char_): Bugfix.

	* lily/source-file.cc (file::get_line): Help binary_search_bounds
	a bit.

	* lily/include/lily-proto.hh (Link_array__char_): Bugfix.

2006-02-03  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* flower/include/array.hh: typo. 

2006-02-02  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/advanced-notation.itely: doc "\#" in text.
