@@ -25,18 +25,18 @@ public:
   virtual Stencil text_stencil (std::string) const;
   virtual Box text_dimension (std::string) const;
   virtual std::string font_name () const;
-  virtual int count () const;
+  virtual vsize count () const;
   virtual Offset attachment_point (std::string) const;
-  virtual Offset get_indexed_wxwy (int) const;
-  virtual Box get_indexed_char (int index) const;
-  virtual Box get_ascii_char (int ascii) const;
-  virtual int name_to_index (std::string) const;
-  virtual unsigned index_to_charcode (int) const;
-  virtual int index_to_ascii (int) const;
+  virtual Offset get_indexed_wxwy (vsize) const;
+  virtual Box get_indexed_char (vsize index) const;
+  virtual Box get_ascii_char (vsize ascii) const;
+  virtual vsize name_to_index (std::string) const;
+  virtual vsize index_to_charcode (vsize) const;
+  virtual vsize index_to_ascii (vsize) const;
   virtual Real design_size () const;
   virtual Stencil find_by_name (std::string) const;
-  virtual Stencil get_indexed_char_stencil (int k) const;
-  virtual Stencil get_ascii_char_stencil (int k) const;
+  virtual Stencil get_indexed_char_stencil (vsize k) const;
+  virtual Stencil get_ascii_char_stencil (vsize k) const;
   virtual SCM sub_fonts () const;
   virtual SCM font_file_name () const;
   DECLARE_SMOBS (Font_metric,);
